[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/departure_scene.gd" id="1_depart"]
[ext_resource type="PackedScene" uid="uid://dl71m5wiab1jw" path="res://Create_a_3D_spaceship_0302194151_texture.glb" id="2_ship"]
[ext_resource type="Environment" uid="uid://dxj5cdg8fount" path="res://default_env.tres" id="3_env"]

[sub_resource type="SphereMesh" id="SphereMesh_planet"]
radius = 20.0
height = 40.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.2, 0.6, 0.8, 1.0)
border_width_bottom = 4
border_color = Color(0.1, 0.3, 0.5, 1.0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="DepartureScene" type="Node3D"]
script = ExtResource("1_depart")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("3_env")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 30, 0)
light_energy = 1.5
shadow_enabled = true

[node name="Planet" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_planet")

[node name="Spaceship" parent="." instance=ExtResource("2_ship")]
transform = Transform3D(15, 0, 0, 0, 0, 15, 0, -15, 0, 0, 30, -100)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 35, 50)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SuccessLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Mission Accomplished!
Returning Home"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Play Again"

[connection signal="pressed" from="UI/RestartButton" to="." method="_on_restart_button_pressed"] 